# bettornia-v2-api

./: Dockerfile  pyproject.toml  requirements.lock.txt
app/: main.py
app/abuse/: metrics.py  middleware.py
app/adapters/: __init__.py  bootstrap.py  contract.py  echo_adapter.py  pinnacle_like_adapter.py  registry.py
app/api/: live_routes.py  reconcile_routes.py  routes.py  settlement_routes.py
app/core/: config.py
app/db/: conn.py
app/domain/: execution_plan.py
app/execution/: live_persist.py  shadow_persist.py
app/obs/: metrics.py  middleware.py
app/reconcile/: run.py
app/settlement/: persist.py
