[project]
name = "bettornia-v2-api"
version = "0.1.0"
description = "Bettornia v2 execution API (shadow-first, no-live by default)"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.3",
  "psycopg[binary]==3.2.3",
]

[tool.uvicorn]
factory = false
